--- a/chapter1.tex
+++ b/chapter1.tex
@@ -43,7 +43,7 @@ Finally, Stage 4, would consiste of barcode sequencing and statistical analysis.
 
 \subsubsection{POPCode: A Precision Oligo Pool Codon alteration mutagenesis method}
 
-This method scales up a previously described method developed by Seyfang~\etal~\cite{seyfang_multiple_2004}. To achieve complete wide coverage over the complete spectrum of possible amino acid changes we design oligonucleotides centering on each codon in the Open Reading Frame (ORF) of interest and replacing the target with an \texttt{NNK} degeneracy code. As explained in chapter~\ref{intro:mutagenesis}, this has been previously used to allow all amino acid changes while reducing the chance of generating stop codons~\cite{pal_methods_2005}. 
+This method scales up a previously described method developed by Seyfang~\etal~\cite{seyfang_multiple_2004}. To achieve complete wide coverage over the complete spectrum of possible amino acid changes we design oligonucleotides centering on each codon in the Open Reading Frame (ORF) of interest and replacing the target with an \texttt{NNK} degeneracy code. As explained in chapter~1 section~\ref{dmsIntro}, this has been previously used to allow all amino acid changes while reducing the chance of generating stop codons~\cite{pal_methods_2005}. 
 In the next step, the ORF sequence is PCR amplified in the presence of dUTP to generate uracil-doped template for the mutagenesis reaction. Oligonucleotide pools were then hybridized with the template. Gaps between hybridizations were filled with non-strand-displacing polymerase. 
 
 When finding a set of suitable oligonucleotide sequences, two important criteria need to be considered: 
