--- a/chapter2.tex
+++ b/chapter2.tex
@@ -272,12 +272,12 @@ In total, this study has produced five maps with functional impacts for 15998 po
 
 Given the prospect of personalized and precision medicine, genome sequencing is expected to become increasingly common in everyday medical practice. Current estimates suggest that every human carries an average of 200-300 rare mutations that have never before been seen in the clinic. This creates a need for fast, reliable interpretation of variant effects. Instead of generating clones and functionally testing variants of unknown significance after they are first observed, DMS technology offers to generate exhaustive maps of functional variation that enable interpretation immediately upon clinical presentation, even for rare and personal variation.
 
-A key requirement for DMS mapping is an en masse functional assay that can be applied at the scale of 104-105 variant clones.  Among $\sim 4000$ disease genes, examination of four systematic screens and curated literature suggests that $\sim 5\%$ of human disease genes have a yeast complementation assay~\cite{5,33,34}. Complementation assays can also be carried out in human cells \todo{REF}, and \textit{en masse} transfection is achievable at the required scale \todo{REF}. Based on only three large-scale CRISPR studies~\cite{35-37}, cellular growth phenotypes have already been observed in at least one cell line for 29\% of human disease genes.  Beyond complementation, sub-functional assays, e.g. of protein interaction, can not only reveal variation that impacts the specifically assayed sub-function but also folding/stability mutations that ablate overall function. In a recent study, approximately two thirds of disease-causing variants were found to impact at least one protein interaction~\cite{38}. Although only a minority of human protein interactions have been mapped~\cite{39}, already 40\% of human genes have at least one interaction partner detectable by yeast two-hybrid assay in a recent screen~\cite{39}. Taking the union of available assays, we estimate that 57\% of known disease-associated genes already have an assay potentially amenable to DMS. Emerging protein interaction data and CRISPR screens suggests that the proportion of DMS-accessible disease genes will continue to rise. 
+A key requirement for DMS mapping is an en masse functional assay that can be applied at the scale of 104-105 variant clones.  Among $\sim 4000$ disease genes, examination of four systematic screens and curated literature suggests that $\sim 5\%$ of human disease genes have a yeast complementation assay~\cite{hamza_complementation_2015,kachroo_systematic_2015,sun_extended_2016}. Complementation assays can also be carried out in human cells \todo{REF}, and \textit{en masse} transfection is achievable at the required scale \todo{REF}. Based on only three large-scale CRISPR studies~\cite{hart_high-resolution_2015,blomen_gene_2015,wang_genetic_2014}, cellular growth phenotypes have already been observed in at least one cell line for 29\% of human disease genes.  Beyond complementation, sub-functional assays, e.g. of protein interaction, can not only reveal variation that impacts the specifically assayed sub-function but also folding/stability mutations that ablate overall function. In a recent study, approximately two thirds of disease-causing variants were found to impact at least one protein interaction~\cite{sahni_widespread_2015}. Although only a minority of human protein interactions have been mapped~\cite{rolland_proteome-scale_2014}, already 40\% of human genes have at least one interaction partner detectable by yeast two-hybrid assay in a recent screen~\cite{rolland_proteome-scale_2014}. Taking the union of available assays, we estimate that 57\% of known disease-associated genes already have an assay potentially amenable to DMS. Emerging protein interaction data and CRISPR screens suggests that the proportion of DMS-accessible disease genes will continue to rise. 
 
 \section{Methods}
 
 \subsection{DMS-TileSeq}
-The DMS-TileSeq experiment for \gene{SUMO1}, \gene{TPK1}, \gene{NCS1}, and \gene{CALM1} was performed by Song Sun and Marta Verby as described in chapter~\cite{ch:data1}. The downstream sequencing data analysis, imputation and regularization was performed as described in chapter~\ref{ch:data1}.
+The DMS-TileSeq experiment for \gene{SUMO1}, \gene{TPK1}, \gene{NCS1}, and \gene{CALM1} was performed by Song Sun and Marta Verby as described in chapter~\ref{ch:data1}. The downstream sequencing data analysis, imputation and regularization was performed as described in chapter~\ref{ch:data1}.
 
 \subsection{UBE2I interface analysis}
 Co-crystal structure data for UBE2I was obtained from the PDB (Entries: \texttt{3UIP}~\cite{gareau_determinants_2012}; \texttt{4W5V}~\cite{reiter_characterization_2016}; \texttt{3KYD}~\cite{olsen_active_2010}; \texttt{2UYZ}~\cite{knipscheer_noncovalent_2007}; \texttt{4Y1L}~\cite{alontaga_rwd_2015}). A custom script was developed to obtain solvent accessibility using \texttt{GETAREA}~\cite{fraczkiewicz_exact_1998} for monomers and complexes, allowing for the calculation of relative burial of interfacial residues. Complementation fitness distributions for each interaction's interfacial residues were tallied and tested for statistically significant differences using Wilcoxon tests. Distributions were plotted using the R package `beeswarm'~\cite{eklund_bee_2016}
