--- a/conclusion.tex
+++ b/conclusion.tex
@@ -31,7 +31,7 @@ However, the commitment towards the construction of a resource is only warranted
 
 \subsection{Adaptation and extentions to DMS technology}
 \subsubsection{DMS in human cell lines}
-As mentioned above, an important future direction is the adaptation of the deep mutational scanning framework toward directly using human cell lines in the competition assays. Recent genome-wide CRISPR screens have revealed a sizable number of genes with growth phenotypes in different human cell lines~\ref{?}~todo{REF}. While a number of DMS efforts have already been performed using human cells~\cite{forsyth_deep_2013,wagenaar_resistance_2014,doud_site-specific_2015,majithia_prospective_2016}, the underlying assays were not generalizable, for example, the most recent effort by Majithia and colleagues~\cite{majithia_prospective_2016} for PPAR$\gamma$ was only possible due to the fortuitous circumstances of having found a surface marker whose expression level directly reflects PPARG$\gamma$ activity. 
+As mentioned above, an important future direction is the adaptation of the deep mutational scanning framework toward directly using human cell lines in the competition assays. Recent genome-wide CRISPR screens have revealed a sizable number of genes with growth phenotypes in different human cell lines~\cite{hart_high-resolution_2015,blomen_gene_2015,wang_genetic_2014}. While a number of DMS efforts have already been performed using human cells~\cite{forsyth_deep_2013,wagenaar_resistance_2014,doud_site-specific_2015,majithia_prospective_2016}, the underlying assays were not generalizable, for example, the most recent effort by Majithia and colleagues~\cite{majithia_prospective_2016} for PPAR$\gamma$ was only possible due to the fortuitous circumstances of having found a surface marker whose expression level directly reflects PPARG$\gamma$ activity. 
 Atina Cote in the Roth Lab is currently working on establishing a generalizable growth-based assay using CRISPR in human cell lines. 
 %previous work: PPARG
 %atina's CRISPR lines
