--- a/thesis.bib
+++ b/thesis.bib
@@ -2321,3 +2321,28 @@ Genet Med 17 5, 405–423.},
 	pages = {27--33},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/G3T9PAWE/Varadaraj et al. - 2014 - SUMO Ubc9 enzyme as a viral target.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/5BIECUPG/abstract.html:text/html}
 }
+
+@article{blomen_gene_2015,
+	title = {Gene essentiality and synthetic lethality in haploid human cells},
+	volume = {350},
+	copyright = {Copyright © 2015, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {http://science.sciencemag.org/content/350/6264/1092},
+	doi = {10.1126/science.aac7557},
+	abstract = {Zeroing in on essential human genes
+More powerful genetic techniques are helping to define the list of genes required for the life of a human cell. Two papers used the CRISPR genome editing system and a gene trap method in haploid human cells to screen for essential genes (see the Perspective by Boone and Andrews). Wang et al.'s analysis of multiple cell lines indicates that it may be possible to find tumor-specific dependencies on particular genes. Blomen et al. investigate the phenomenon in which nonessential genes are required for fitness in the absence of another gene. Hence, complexity rather than robustness is the human strategy.
+Science, this issue p. 1096 and p. 1092; see also p. 1028
+Although the genes essential for life have been identified in less complex model organisms, their elucidation in human cells has been hindered by technical barriers. We used extensive mutagenesis in haploid human cells to identify approximately 2000 genes required for optimal fitness under culture conditions. To study the principles of genetic interactions in human cells, we created a synthetic lethality network focused on the secretory pathway based exclusively on mutations. This revealed a genetic cross-talk governing Golgi homeostasis, an additional subunit of the human oligosaccharyltransferase complex, and a phosphatidylinositol 4-kinase β adaptor hijacked by viruses. The synthetic lethality map parallels observations made in yeast and projects a route forward to reveal genetic networks in diverse aspects of human cell biology.
+Systematic mutagenesis reveals essential genetic interactions required for human cells to keep growing. [Also see Perspective by Boone and Andrews]
+Systematic mutagenesis reveals essential genetic interactions required for human cells to keep growing. [Also see Perspective by Boone and Andrews]},
+	language = {en},
+	number = {6264},
+	urldate = {2017-03-05},
+	journal = {Science},
+	author = {Blomen, Vincent A. and Májek, Peter and Jae, Lucas T. and Bigenzahn, Johannes W. and Nieuwenhuis, Joppe and Staring, Jacqueline and Sacco, Roberto and Diemen, Ferdy R. van and Olk, Nadine and Stukalov, Alexey and Marceau, Caleb and Janssen, Hans and Carette, Jan E. and Bennett, Keiryn L. and Colinge, Jacques and Superti-Furga, Giulio and Brummelkamp, Thijn R.},
+	month = nov,
+	year = {2015},
+	pmid = {26472760},
+	pages = {1092--1096},
+	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/FAUI5D26/1092.html:text/html}
+}
