--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \begin{abstract}
 %% (At most 350 words for Ph.D.)
 
-Although we now routinely sequence human genomes, we cannot yet confidently identify functional variants. Here a deep mutational scanning framework is developed that combines random codon-mutagenesis and multiplexed functional variation assays with computational imputation and regularization to yield look-up tables for human missense variants. The framework is applied to five proteins corresponding to seven human genes: UBE2I (encoding SUMO E2 conjugase), SUMO1 (small ubiquitin-like modifier), NCS1 (neuronal calcium sensor 1), TPK1 (thiamin pyrophosphokinase), and CALM1/2/3 (three genes encoding the protein calmodulin). The resulting functional impact scores correspond to known protein features, and serve to confidently identify pathogenic variation. %Analysis of large-scale phenotypic screens suggests that assays potentially amenable to deep mutational scanning are already available for 57\% of human disease genes.
+Although we now routinely sequence human genomes, we cannot yet confidently identify functional variants. Here a deep mutational scanning framework is developed that combines random codon-mutagenesis and multiplexed functional variation assays with computational imputation and regularization to yield exhaustive functional maps for human missense variants. The framework is applied to five proteins corresponding to seven human genes: \gene{UBE2I} (encoding SUMO E2 conjugase), \gene{SUMO1} (small ubiquitin-like modifier), \gene{NCS1} (neuronal calcium sensor 1), \gene{TPK1} (thiamin pyrophosphokinase), and \gene{CALM1/2/3} (three genes encoding the protein calmodulin). The resulting functional impact scores correspond to known protein features, and serve to confidently identify pathogenic variation. %Analysis of large-scale phenotypic screens suggests that assays potentially amenable to deep mutational scanning are already available for 57\% of human disease genes.
 \end{abstract}
 
 %\begin{dedication}
@@ -53,7 +53,7 @@ Although we now routinely sequence human genomes, we cannot yet confidently iden
 %\end{dedication}
 
 \begin{acknowledgements}
-The author gratefully acknowledges funding by the National Institutes of Health, the Canadian Excellence Research Chair, the Canadian Center for Advanced Research and the Ontario Ministry of Research and Innovation. The author would also like to thank Fritz Roth, Atina Cote, Jennifer Knapp, Song Sun, Marta Verby, Yingzhou Wu, Cassandra Wong, Fan Yang, Carles Pons, Natascha van Lieshout, Anjali Gopal,  Guihong Tan, Joseph Mellor, Brenda Andrews, Charles Boone, Nidhi Sahni, Marc Vidal, and David Hill for their collaboration.
+The author would like to thank Fritz Roth, Atina Cote, Jennifer Knapp, Song Sun, Marta Verby, Yingzhou Wu, Cassandra Wong, Fan Yang, Carles Pons, Patrick Aloy, Natascha van Lieshout, Anjali Gopal, Jesse Bloom, Guihong Tan, Joseph Mellor, Shan Yang, Robert Nussbaum, Douglas Fowler, Nidhi Sahni, Marc Vidal, David Hill, Amy Caudy, Lincoln Stein, and Igor Stagljar for their collaboration, help and advice. The Roth Lab also gratefully acknowledges funding by the National Institutes of Health, the Canadian Excellence Research Chair, the Canadian Institute for Advanced Research and the Ontario Ministry of Research, Innovation and Science. 
 \end{acknowledgements}
 
 \tableofcontents
